@@ -1,5 +1,6 @@
 LATEST
 -------------------------------
+- ITF validation (reader): allow unique TID per table
 
 ili2fme 7.0.12 (2020-12-28)
 -------------------------------
@@ -20,7 +21,7 @@ ili2fme 7.0.9 (2020-08-28)
 -------------------------------
 - new reader parameter "ITF Ignore Polygon Building Errors"
 - ITF reader: add ili2fme-6.x compatibility mode (enabled if reader parameter CREATE_LINETABLES present)
-- ITF validation: allow TID per table
+- ITF validation (writer): allow unique TID per table
 - ili2c-5.1.2
 - iox-ili-1.21.1
 
